# streaming-data-pipeline

./: .gitignore  README.md  create_pgsql_db_schema_table.sh  create_pgsql_db_schema_table.sql  pyproject.toml
scripts/: .cache  load_spotify_database.py  retrieve_spotify_data.py  top_50_sg.json
scripts/config/: urls.json
scripts/utils/: db.py  utils.py
stream-env/: pyvenv.cfg
